prod/pips/src/Libs/c_syntax/cyacc.output
Terminals unused in grammar

   TK_ATTRIBUTE
   TK_BUILTIN_VA_LIST
   TK_BLOCKATTRIBUTE
   TK_DECLSPEC


Rules useless in parser due to conflicts

   12 $@2: /* empty */


State 21 conflicts: 1 shift/reduce
State 249 conflicts: 1 shift/reduce
State 263 conflicts: 1 shift/reduce


Grammar

    0 $accept: interpret $end

    1 interpret: file TK_EOF

    2 file: globals

    3 globals: /* empty */

    4 $@1: /* empty */

    5 globals: $@1 global globals
    6        | TK_SEMICOLON globals

    7 location: /* empty */

    8 global: declaration
    9       | function_def
   10       | TK_ASM TK_LPAREN string_constant TK_RPAREN TK_SEMICOLON
   11       | TK_PRAGMA

   12 $@2: /* empty */

   13 global: TK_IDENT TK_LPAREN $@2 old_parameter_list_ne TK_RPAREN old_pardef_list TK_SEMICOLON
   14       | TK_AT_TRANSFORM TK_LBRACE global TK_RBRACE TK_IDENT TK_LBRACE globals TK_RBRACE
   15       | TK_AT_TRANSFORMEXPR TK_LBRACE expression TK_RBRACE TK_IDENT TK_LBRACE expression TK_RBRACE
   16       | location error TK_SEMICOLON

   17 id_or_typename: TK_IDENT
   18               | TK_NAMED_TYPE
   19               | TK_AT_NAME TK_LPAREN TK_IDENT TK_RPAREN

   20 maybecomma: /* empty */
   21           | TK_COMMA

   22 expression: constant
   23           | TK_IDENT
   24           | TK_SIZEOF expression
   25           | TK_SIZEOF TK_LPAREN type_name TK_RPAREN
   26           | TK_ALIGNOF expression
   27           | TK_ALIGNOF TK_LPAREN type_name TK_RPAREN
   28           | TK_PLUS expression
   29           | TK_MINUS expression
   30           | TK_STAR expression
   31           | TK_AND expression
   32           | TK_EXCLAM expression
   33           | TK_TILDE expression
   34           | TK_PLUS_PLUS expression
   35           | expression TK_PLUS_PLUS
   36           | TK_MINUS_MINUS expression
   37           | expression TK_MINUS_MINUS
   38           | expression TK_ARROW id_or_typename
   39           | expression TK_DOT id_or_typename
   40           | TK_LPAREN block TK_RPAREN
   41           | paren_comma_expression
   42           | expression TK_LPAREN arguments TK_RPAREN
   43           | TK_BUILTIN_VA_ARG TK_LPAREN expression TK_COMMA type_name TK_RPAREN
   44           | expression bracket_comma_expression
   45           | expression TK_QUEST opt_expression TK_COLON expression
   46           | expression TK_PLUS expression
   47           | expression TK_MINUS expression
   48           | expression TK_STAR expression
   49           | expression TK_SLASH expression
   50           | expression TK_PERCENT expression
   51           | expression TK_AND_AND expression
   52           | expression TK_PIPE_PIPE expression
   53           | expression TK_AND expression
   54           | expression TK_PIPE expression
   55           | expression TK_CIRC expression
   56           | expression TK_EQ_EQ expression
   57           | expression TK_EXCLAM_EQ expression
   58           | expression TK_INF expression
   59           | expression TK_SUP expression
   60           | expression TK_INF_EQ expression
   61           | expression TK_SUP_EQ expression
   62           | expression TK_INF_INF expression
   63           | expression TK_SUP_SUP expression
   64           | expression TK_EQ expression
   65           | expression TK_PLUS_EQ expression
   66           | expression TK_MINUS_EQ expression
   67           | expression TK_STAR_EQ expression
   68           | expression TK_SLASH_EQ expression
   69           | expression TK_PERCENT_EQ expression
   70           | expression TK_AND_EQ expression
   71           | expression TK_PIPE_EQ expression
   72           | expression TK_CIRC_EQ expression
   73           | expression TK_INF_INF_EQ expression
   74           | expression TK_SUP_SUP_EQ expression
   75           | TK_LPAREN type_name TK_RPAREN expression
   76           | TK_LPAREN type_name TK_RPAREN TK_LBRACE initializer_list_opt TK_RBRACE
   77           | TK_AND_AND TK_IDENT
   78           | TK_AT_EXPR TK_LPAREN TK_IDENT TK_RPAREN

   79 constant: TK_INTCON
   80         | TK_FLOATCON
   81         | TK_COMPLEXCON
   82         | TK_CHARCON
   83         | string_constant
   84         | wstring_list

   85 string_constant: string_list

   86 one_string_constant: TK_STRINGCON

   87 string_list: one_string
   88            | string_list one_string

   89 wstring_list: TK_WSTRINGCON
   90             | wstring_list one_string
   91             | wstring_list TK_WSTRINGCON

   92 one_string: TK_STRINGCON
   93           | TK_FUNCTION__
   94           | TK_PRETTY_FUNCTION__

   95 init_expression: expression
   96                | TK_LBRACE initializer_list_opt TK_RBRACE

   97 initializer_list: initializer
   98                 | initializer TK_COMMA initializer_list_opt

   99 initializer_list_opt: /* empty */
  100                     | initializer_list

  101 initializer: init_designators eq_opt init_expression
  102            | gcc_init_designators init_expression
  103            | init_expression

  104 eq_opt: TK_EQ
  105       | /* empty */

  106 init_designators: TK_DOT id_or_typename init_designators_opt
  107                 | TK_LBRACKET expression TK_RBRACKET init_designators_opt
  108                 | TK_LBRACKET expression TK_ELLIPSIS expression TK_RBRACKET

  109 init_designators_opt: /* empty */
  110                     | init_designators

  111 gcc_init_designators: id_or_typename TK_COLON

  112 arguments: /* empty */
  113          | comma_expression

  114 opt_expression: /* empty */
  115               | comma_expression

  116 comma_expression: expression
  117                 | expression TK_COMMA comma_expression
  118                 | error TK_COMMA comma_expression

  119 comma_expression_opt: /* empty */
  120                     | comma_expression

  121 statement_paren_comma_expression: TK_LPAREN comma_expression TK_RPAREN
  122                                 | TK_LPAREN error TK_RPAREN

  123 paren_comma_expression: TK_LPAREN comma_expression TK_RPAREN
  124                       | TK_LPAREN error TK_RPAREN

  125 bracket_comma_expression: TK_LBRACKET comma_expression TK_RBRACKET
  126                         | TK_LBRACKET error TK_RBRACKET

  127 $@3: /* empty */

  128 statements_inside_block: TK_LBRACE $@3 local_labels block_attrs statement_list

  129 block: statements_inside_block TK_RBRACE
  130      | error location TK_RBRACE

  131 block_attrs: /* empty */

  132 statement_list: /* empty */
  133               | pragmas
  134               | statement statement_list
  135               | label

  136 local_labels: /* empty */
  137             | TK_LABEL__ local_label_names TK_SEMICOLON local_labels

  138 local_label_names: TK_IDENT
  139                  | TK_IDENT TK_COMMA local_label_names

  140 label: TK_IDENT TK_COLON

  141 pragma: TK__Pragma TK_LPAREN string_constant TK_RPAREN
  142       | TK_PRAGMA

  143 pragmas: pragma
  144        | pragma pragmas

  145 statement: pragmas statement_without_pragma
  146          | statement_without_pragma

  147 statement_without_pragma: TK_SEMICOLON
  148                         | comma_expression TK_SEMICOLON
  149                         | block
  150                         | declaration
  151                         | TK_IF statement_paren_comma_expression statement
  152                         | TK_IF statement_paren_comma_expression statement TK_ELSE statement

  153 $@4: /* empty */

  154 $@5: /* empty */

  155 statement_without_pragma: TK_SWITCH $@4 statement_paren_comma_expression $@5 statement

  156 $@6: /* empty */

  157 statement_without_pragma: TK_WHILE $@6 statement_paren_comma_expression statement

  158 $@7: /* empty */

  159 statement_without_pragma: TK_DO $@7 statement TK_WHILE statement_paren_comma_expression TK_SEMICOLON

  160 $@8: /* empty */

  161 statement_without_pragma: for_clause opt_expression TK_SEMICOLON opt_expression TK_SEMICOLON opt_expression $@8 TK_RPAREN statement

  162 $@9: /* empty */

  163 $@10: /* empty */

  164 statement_without_pragma: for_clause $@9 declaration opt_expression TK_SEMICOLON opt_expression TK_RPAREN $@10 statement
  165                         | label statement
  166                         | TK_CASE expression TK_COLON
  167                         | TK_CASE expression TK_ELLIPSIS expression TK_COLON
  168                         | TK_DEFAULT TK_COLON
  169                         | TK_RETURN TK_SEMICOLON
  170                         | TK_RETURN comma_expression TK_SEMICOLON
  171                         | TK_BREAK TK_SEMICOLON
  172                         | TK_CONTINUE TK_SEMICOLON
  173                         | TK_GOTO TK_IDENT TK_SEMICOLON
  174                         | TK_GOTO TK_STAR comma_expression TK_SEMICOLON
  175                         | TK_ASM asmattr TK_LPAREN string_constant asmoutputs TK_RPAREN TK_SEMICOLON
  176                         | TK_MSASM
  177                         | error location TK_SEMICOLON

  178 $@11: /* empty */

  179 for_clause: TK_FOR $@11 TK_LPAREN

  180 declaration: decl_spec_list init_declarator_list TK_SEMICOLON
  181            | decl_spec_list TK_SEMICOLON

  182 init_declarator_list: init_declarator
  183                     | init_declarator TK_COMMA init_declarator_list

  184 init_declarator: declarator
  185                | declarator TK_EQ init_expression

  186 $@12: /* empty */

  187 decl_spec_list: $@12 my_decl_spec_list

  188 my_decl_spec_list: TK_TYPEDEF decl_spec_list_opt
  189                  | TK_EXTERN decl_spec_list_opt
  190                  | TK_STATIC decl_spec_list_opt
  191                  | TK_THREAD decl_spec_list_opt
  192                  | TK_AUTO decl_spec_list_opt
  193                  | TK_REGISTER decl_spec_list_opt
  194                  | type_spec decl_spec_list_opt_no_named
  195                  | TK_INLINE decl_spec_list_opt
  196                  | attribute decl_spec_list_opt
  197                  | TK_AT_SPECIFIER TK_LPAREN TK_IDENT TK_RPAREN

  198 decl_spec_list_opt: /* empty */
  199                   | my_decl_spec_list

  200 decl_spec_list_opt_no_named: /* empty */
  201                            | my_decl_spec_list

  202 type_spec: TK_VOID
  203          | TK_CHAR
  204          | TK_SHORT
  205          | TK_INT
  206          | TK_INT128
  207          | TK_UINT128
  208          | TK_COMPLEX
  209          | TK_LONG
  210          | TK_FLOAT
  211          | TK_DOUBLE
  212          | TK_SIGNED
  213          | TK_UNSIGNED
  214          | TK_STRUCT id_or_typename

  215 $@13: /* empty */

  216 type_spec: TK_STRUCT id_or_typename TK_LBRACE $@13 struct_decl_list TK_RBRACE

  217 $@14: /* empty */

  218 type_spec: TK_STRUCT TK_LBRACE $@14 struct_decl_list TK_RBRACE
  219          | TK_UNION id_or_typename

  220 $@15: /* empty */

  221 type_spec: TK_UNION id_or_typename TK_LBRACE $@15 struct_decl_list TK_RBRACE

  222 $@16: /* empty */

  223 type_spec: TK_UNION TK_LBRACE $@16 struct_decl_list TK_RBRACE
  224          | TK_ENUM id_or_typename
  225          | TK_ENUM id_or_typename TK_LBRACE enum_list maybecomma TK_RBRACE
  226          | TK_ENUM TK_LBRACE enum_list maybecomma TK_RBRACE
  227          | TK_NAMED_TYPE
  228          | TK_TYPEOF TK_LPAREN expression TK_RPAREN
  229          | TK_TYPEOF TK_LPAREN type_name TK_RPAREN

  230 struct_decl_list: /* empty */
  231                 | decl_spec_list TK_SEMICOLON struct_decl_list

  232 $@17: /* empty */

  233 struct_decl_list: decl_spec_list $@17 field_decl_list TK_SEMICOLON struct_decl_list
  234                 | error TK_SEMICOLON struct_decl_list

  235 field_decl_list: field_decl
  236                | field_decl TK_COMMA field_decl_list

  237 field_decl: declarator
  238           | declarator TK_COLON expression
  239           | TK_COLON expression

  240 enum_list: enumerator
  241          | enum_list TK_COMMA enumerator
  242          | enum_list TK_COMMA error

  243 enumerator: TK_IDENT
  244           | TK_IDENT TK_EQ expression

  245 declarator: pointer_opt direct_decl attributes_with_asm

  246 direct_decl: id_or_typename
  247            | TK_LPAREN attributes declarator TK_RPAREN
  248            | direct_decl TK_LBRACKET attributes comma_expression_opt TK_RBRACKET
  249            | direct_decl TK_LBRACKET attributes error TK_RBRACKET

  250 $@18: /* empty */

  251 direct_decl: direct_decl parameter_list_startscope $@18 rest_par_list TK_RPAREN

  252 parameter_list_startscope: TK_LPAREN

  253 rest_par_list: /* empty */
  254              | parameter_decl rest_par_list1

  255 rest_par_list1: /* empty */

  256 $@19: /* empty */

  257 rest_par_list1: TK_COMMA $@19 TK_ELLIPSIS

  258 $@20: /* empty */

  259 rest_par_list1: TK_COMMA $@20 parameter_decl rest_par_list1

  260 parameter_decl: decl_spec_list declarator
  261               | decl_spec_list abstract_decl
  262               | decl_spec_list
  263               | TK_LPAREN parameter_decl TK_RPAREN

  264 old_proto_decl: pointer_opt direct_old_proto_decl

  265 $@21: /* empty */

  266 direct_old_proto_decl: direct_decl TK_LPAREN $@21 old_parameter_list_ne TK_RPAREN old_pardef_list

  267 old_parameter_list_ne: TK_IDENT
  268                      | TK_IDENT TK_COMMA old_parameter_list_ne

  269 old_pardef_list: /* empty */
  270                | decl_spec_list old_pardef TK_SEMICOLON TK_ELLIPSIS
  271                | decl_spec_list old_pardef TK_SEMICOLON old_pardef_list

  272 old_pardef: declarator
  273           | declarator TK_COMMA old_pardef
  274           | error

  275 pointer: TK_STAR attributes pointer_opt

  276 pointer_opt: /* empty */
  277            | pointer

  278 type_name: decl_spec_list abstract_decl
  279          | decl_spec_list

  280 abstract_decl: pointer_opt abs_direct_decl attributes
  281              | pointer

  282 abs_direct_decl: TK_LPAREN attributes abstract_decl TK_RPAREN
  283                | TK_LPAREN error TK_RPAREN
  284                | abs_direct_decl_opt TK_LBRACKET comma_expression_opt TK_RBRACKET

  285 $@22: /* empty */

  286 abs_direct_decl: abs_direct_decl_opt parameter_list_startscope $@22 rest_par_list TK_RPAREN

  287 abs_direct_decl_opt: abs_direct_decl
  288                    | /* empty */

  289 $@23: /* empty */

  290 function_def: function_def_start $@23 block

  291 function_def_start: decl_spec_list declarator
  292                   | decl_spec_list old_proto_decl

  293 $@24: /* empty */

  294 function_def_start: TK_IDENT parameter_list_startscope $@24 rest_par_list TK_RPAREN

  295 $@25: /* empty */

  296 function_def_start: TK_IDENT TK_LPAREN old_parameter_list_ne $@25 TK_RPAREN old_pardef_list

  297 attributes: /* empty */
  298           | attribute attributes

  299 attributes_with_asm: /* empty */
  300                    | attribute attributes_with_asm
  301                    | TK_ASM TK_LPAREN string_constant TK_RPAREN attributes

  302 attribute: TK_MSATTR
  303          | TK_CONST
  304          | TK_RESTRICT
  305          | TK_VOLATILE
  306          | TK_STATIC_DIMENSION

  307 asmattr: /* empty */
  308        | TK_VOLATILE asmattr
  309        | TK_CONST asmattr

  310 asmoutputs: /* empty */
  311           | TK_COLON asmoperands asminputs

  312 asmoperands: /* empty */
  313            | asmoperandsne

  314 asmoperandsne: asmoperand
  315              | asmoperandsne TK_COMMA asmoperand

  316 asmoperand: string_constant TK_LPAREN expression TK_RPAREN
  317           | string_constant TK_LPAREN error TK_RPAREN

  318 asminputs: /* empty */
  319          | TK_COLON asmoperands asmclobber

  320 asmclobber: /* empty */
  321           | TK_COLON asmcloberlst_ne

  322 asmcloberlst_ne: one_string_constant
  323                | one_string_constant TK_COMMA asmcloberlst_ne


Terminals, with rules where they appear

$end (0) 0
error (256) 16 118 122 124 126 130 177 234 242 249 274 283 317
TK_IDENT (258) 13 14 15 17 19 23 77 78 138 139 140 173 197 243 244
    267 268 294 296
TK_CHARCON (259) 82
TK_INTCON (260) 79
TK_FLOATCON (261) 80
TK_NAMED_TYPE (262) 18 227
TK_STRINGCON (263) 86 92
TK_WSTRINGCON (264) 89 91
TK_EOF (265) 1
TK_CHAR (266) 203
TK_INT (267) 205
TK_INT128 (268) 206
TK_UINT128 (269) 207
TK_DOUBLE (270) 211
TK_FLOAT (271) 210
TK_VOID (272) 202
TK_COMPLEX (273) 208
TK_ENUM (274) 224 225 226
TK_STRUCT (275) 214 216 218
TK_TYPEDEF (276) 188
TK_UNION (277) 219 221 223
TK_SIGNED (278) 212
TK_UNSIGNED (279) 213
TK_LONG (280) 209
TK_SHORT (281) 204
TK_VOLATILE (282) 305 308
TK_EXTERN (283) 189
TK_STATIC (284) 190
TK_STATIC_DIMENSION (285) 306
TK_CONST (286) 303 309
TK_RESTRICT (287) 304
TK_AUTO (288) 192
TK_REGISTER (289) 193
TK_THREAD (290) 191
TK_SIZEOF (291) 24 25
TK_ALIGNOF (292) 26 27
TK_EQ (293) 64 104 185 244
TK_PLUS_EQ (294) 65
TK_MINUS_EQ (295) 66
TK_STAR_EQ (296) 67
TK_SLASH_EQ (297) 68
TK_PERCENT_EQ (298) 69
TK_AND_EQ (299) 70
TK_PIPE_EQ (300) 71
TK_CIRC_EQ (301) 72
TK_INF_INF_EQ (302) 73
TK_SUP_SUP_EQ (303) 74
TK_ARROW (304) 38
TK_DOT (305) 39 106
TK_EQ_EQ (306) 56
TK_EXCLAM_EQ (307) 57
TK_INF (308) 58
TK_SUP (309) 59
TK_INF_EQ (310) 60
TK_SUP_EQ (311) 61
TK_PLUS (312) 28 46
TK_MINUS (313) 29 47
TK_STAR (314) 30 48 174 275
TK_SLASH (315) 49
TK_PERCENT (316) 50
TK_TILDE (317) 33
TK_AND (318) 31 53
TK_PIPE (319) 54
TK_CIRC (320) 55
TK_EXCLAM (321) 32
TK_AND_AND (322) 51 77
TK_PIPE_PIPE (323) 52
TK_INF_INF (324) 62
TK_SUP_SUP (325) 63
TK_PLUS_PLUS (326) 34 35
TK_MINUS_MINUS (327) 36 37
TK_RPAREN (328) 10 13 19 25 27 40 42 43 75 76 78 121 122 123 124 141
    161 164 175 197 228 229 247 251 263 266 282 283 286 294 296 301
    316 317
TK_LPAREN (329) 10 13 19 25 27 40 42 43 75 76 78 121 122 123 124 141
    175 179 197 228 229 247 252 263 266 282 283 296 301 316 317
TK_RBRACE (330) 14 15 76 96 129 130 216 218 221 223 225 226
TK_LBRACE (331) 14 15 76 96 128 216 218 221 223 225 226
TK_LBRACKET (332) 107 108 125 126 248 249 284
TK_RBRACKET (333) 107 108 125 126 248 249 284
TK_COLON (334) 45 111 140 166 167 168 238 239 311 319 321
TK_SEMICOLON (335) 6 10 13 16 137 147 148 159 161 164 169 170 171 172
    173 174 175 177 180 181 231 233 234 270 271
TK_COMMA (336) 21 43 98 117 118 139 183 236 241 242 257 259 268 273
    315 323
TK_ELLIPSIS (337) 108 167 257 270
TK_QUEST (338) 45
TK_BREAK (339) 171
TK_CONTINUE (340) 172
TK_GOTO (341) 173 174
TK_RETURN (342) 169 170
TK_SWITCH (343) 155
TK_CASE (344) 166 167
TK_DEFAULT (345) 168
TK_WHILE (346) 157 159
TK_DO (347) 159
TK_FOR (348) 179
TK_IF (349) 151 152
TK_ELSE (350) 152
TK_ATTRIBUTE (351)
TK_INLINE (352) 195
TK_ASM (353) 10 175 301
TK_TYPEOF (354) 228 229
TK_FUNCTION__ (355) 93
TK_PRETTY_FUNCTION__ (356) 94
TK_LABEL__ (357) 137
TK_BUILTIN_VA_ARG (358) 43
TK_BUILTIN_VA_LIST (359)
TK_BLOCKATTRIBUTE (360)
TK_DECLSPEC (361)
TK_MSASM (362) 176
TK_MSATTR (363) 302
TK_PRAGMA (364) 11 142
TK__Pragma (365) 141
TK_AT_TRANSFORM (366) 14
TK_AT_TRANSFORMEXPR (367) 15
TK_AT_SPECIFIER (368) 197
TK_AT_EXPR (369) 78
TK_AT_NAME (370) 19
TK_COMPLEXCON (371) 81
TK_CAST (372)
TK_ADDROF (373)


Nonterminals, with rules where they appear

$accept (119)
    on left: 0
interpret (120)
    on left: 1, on right: 0
file (121)
    on left: 2, on right: 1
globals (122)
    on left: 3 5 6, on right: 2 5 6 14
$@1 (123)
    on left: 4, on right: 5
location (124)
    on left: 7, on right: 16 130 177
global (125)
    on left: 8 9 10 11 13 14 15 16, on right: 5 14
$@2 (126)
    on left: 12, on right: 13
id_or_typename (127)
    on left: 17 18 19, on right: 38 39 106 111 214 216 219 221 224
    225 246
maybecomma (128)
    on left: 20 21, on right: 225 226
expression (129)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78, on right:
    15 24 26 28 29 30 31 32 33 34 35 36 37 38 39 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 95 107 108 116 117 166 167 228 238 239 244
    316
constant (130)
    on left: 79 80 81 82 83 84, on right: 22
string_constant (131)
    on left: 85, on right: 10 83 141 175 301 316 317
one_string_constant (132)
    on left: 86, on right: 322 323
string_list (133)
    on left: 87 88, on right: 85 88
wstring_list (134)
    on left: 89 90 91, on right: 84 90 91
one_string (135)
    on left: 92 93 94, on right: 87 88 90
init_expression (136)
    on left: 95 96, on right: 101 102 103 185
initializer_list (137)
    on left: 97 98, on right: 100
initializer_list_opt (138)
    on left: 99 100, on right: 76 96 98
initializer (139)
    on left: 101 102 103, on right: 97 98
eq_opt (140)
    on left: 104 105, on right: 101
init_designators (141)
    on left: 106 107 108, on right: 101 110
init_designators_opt (142)
    on left: 109 110, on right: 106 107
gcc_init_designators (143)
    on left: 111, on right: 102
arguments (144)
    on left: 112 113, on right: 42
opt_expression (145)
    on left: 114 115, on right: 45 161 164
comma_expression (146)
    on left: 116 117 118, on right: 113 115 117 118 120 121 123 125
    148 170 174
comma_expression_opt (147)
    on left: 119 120, on right: 248 284
statement_paren_comma_expression (148)
    on left: 121 122, on right: 151 152 155 157 159
paren_comma_expression (149)
    on left: 123 124, on right: 41
bracket_comma_expression (150)
    on left: 125 126, on right: 44
statements_inside_block (151)
    on left: 128, on right: 129
$@3 (152)
    on left: 127, on right: 128
block (153)
    on left: 129 130, on right: 40 149 290
block_attrs (154)
    on left: 131, on right: 128
statement_list (155)
    on left: 132 133 134 135, on right: 128 134
local_labels (156)
    on left: 136 137, on right: 128 137
local_label_names (157)
    on left: 138 139, on right: 137 139
label (158)
    on left: 140, on right: 135 165
pragma (159)
    on left: 141 142, on right: 143 144
pragmas (160)
    on left: 143 144, on right: 133 144 145
statement (161)
    on left: 145 146, on right: 134 151 152 155 157 159 161 164 165
statement_without_pragma (162)
    on left: 147 148 149 150 151 152 155 157 159 161 164 165 166 167
    168 169 170 171 172 173 174 175 176 177, on right: 145 146
$@4 (163)
    on left: 153, on right: 155
$@5 (164)
    on left: 154, on right: 155
$@6 (165)
    on left: 156, on right: 157
$@7 (166)
    on left: 158, on right: 159
$@8 (167)
    on left: 160, on right: 161
$@9 (168)
    on left: 162, on right: 164
$@10 (169)
    on left: 163, on right: 164
for_clause (170)
    on left: 179, on right: 161 164
$@11 (171)
    on left: 178, on right: 179
declaration (172)
    on left: 180 181, on right: 8 150 164
init_declarator_list (173)
    on left: 182 183, on right: 180 183
init_declarator (174)
    on left: 184 185, on right: 182 183
decl_spec_list (175)
    on left: 187, on right: 180 181 231 233 260 261 262 270 271 278
    279 291 292
$@12 (176)
    on left: 186, on right: 187
my_decl_spec_list (177)
    on left: 188 189 190 191 192 193 194 195 196 197, on right: 187
    199 201
decl_spec_list_opt (178)
    on left: 198 199, on right: 188 189 190 191 192 193 195 196
decl_spec_list_opt_no_named (179)
    on left: 200 201, on right: 194
type_spec (180)
    on left: 202 203 204 205 206 207 208 209 210 211 212 213 214 216
    218 219 221 223 224 225 226 227 228 229, on right: 194
$@13 (181)
    on left: 215, on right: 216
$@14 (182)
    on left: 217, on right: 218
$@15 (183)
    on left: 220, on right: 221
$@16 (184)
    on left: 222, on right: 223
struct_decl_list (185)
    on left: 230 231 233 234, on right: 216 218 221 223 231 233 234
$@17 (186)
    on left: 232, on right: 233
field_decl_list (187)
    on left: 235 236, on right: 233 236
field_decl (188)
    on left: 237 238 239, on right: 235 236
enum_list (189)
    on left: 240 241 242, on right: 225 226 241 242
enumerator (190)
    on left: 243 244, on right: 240 241
declarator (191)
    on left: 245, on right: 184 185 237 238 247 260 272 273 291
direct_decl (192)
    on left: 246 247 248 249 251, on right: 245 248 249 251 266
$@18 (193)
    on left: 250, on right: 251
parameter_list_startscope (194)
    on left: 252, on right: 251 286 294
rest_par_list (195)
    on left: 253 254, on right: 251 286 294
rest_par_list1 (196)
    on left: 255 257 259, on right: 254 259
$@19 (197)
    on left: 256, on right: 257
$@20 (198)
    on left: 258, on right: 259
parameter_decl (199)
    on left: 260 261 262 263, on right: 254 259 263
old_proto_decl (200)
    on left: 264, on right: 292
direct_old_proto_decl (201)
    on left: 266, on right: 264
$@21 (202)
    on left: 265, on right: 266
old_parameter_list_ne (203)
    on left: 267 268, on right: 13 266 268 296
old_pardef_list (204)
    on left: 269 270 271, on right: 13 266 271 296
old_pardef (205)
    on left: 272 273 274, on right: 270 271 273
pointer (206)
    on left: 275, on right: 277 281
pointer_opt (207)
    on left: 276 277, on right: 245 264 275 280
type_name (208)
    on left: 278 279, on right: 25 27 43 75 76 229
abstract_decl (209)
    on left: 280 281, on right: 261 278 282
abs_direct_decl (210)
    on left: 282 283 284 286, on right: 280 287
$@22 (211)
    on left: 285, on right: 286
abs_direct_decl_opt (212)
    on left: 287 288, on right: 284 286
function_def (213)
    on left: 290, on right: 9
$@23 (214)
    on left: 289, on right: 290
function_def_start (215)
    on left: 291 292 294 296, on right: 290
$@24 (216)
    on left: 293, on right: 294
$@25 (217)
    on left: 295, on right: 296
attributes (218)
    on left: 297 298, on right: 247 248 249 275 280 282 298 301
attributes_with_asm (219)
    on left: 299 300 301, on right: 245 300
attribute (220)
    on left: 302 303 304 305 306, on right: 196 298 300
asmattr (221)
    on left: 307 308 309, on right: 175 308 309
asmoutputs (222)
    on left: 310 311, on right: 175
asmoperands (223)
    on left: 312 313, on right: 311 319
asmoperandsne (224)
    on left: 314 315, on right: 313 315
asmoperand (225)
    on left: 316 317, on right: 314 315
asminputs (226)
    on left: 318 319, on right: 311
asmclobber (227)
    on left: 320 321, on right: 319
asmcloberlst_ne (228)
    on left: 322 323, on right: 321 323


state 0

    0 $accept: . interpret $end

    TK_SEMICOLON  shift, and go to state 1

    TK_EOF    reduce using rule 3 (globals)
    $default  reduce using rule 4 ($@1)

    interpret  go to state 2
    file       go to state 3
    globals    go to state 4
    $@1        go to state 5


state 1

    6 globals: TK_SEMICOLON . globals

    TK_SEMICOLON  shift, and go to state 1

    TK_EOF     reduce using rule 3 (globals)
    TK_RBRACE  reduce using rule 3 (globals)
    $default   reduce using rule 4 ($@1)

    globals  go to state 6
    $@1      go to state 5


state 2

    0 $accept: interpret . $end

    $end  shift, and go to state 7


state 3

    1 interpret: file . TK_EOF

    TK_EOF  shift, and go to state 8


state 4

    2 file: globals .

    $default  reduce using rule 2 (file)


state 5

    5 globals: $@1 . global globals

    TK_IDENT             shift, and go to state 9
    TK_ASM               shift, and go to state 10
    TK_PRAGMA            shift, and go to state 11
    TK_AT_TRANSFORM      shift, and go to state 12
    TK_AT_TRANSFORMEXPR  shift, and go to state 13

    error     reduce using rule 7 (location)
    $default  reduce using rule 186 ($@12)

    location            go to state 14
    global              go to state 15
    declaration         go to state 16
    decl_spec_list      go to state 17
    $@12                go to state 18
    function_def        go to state 19
    function_def_start  go to state 20


state 6

    6 globals: TK_SEMICOLON globals .

    $default  reduce using rule 6 (globals)


state 7

    0 $accept: interpret $end .

    $default  accept


state 8

    1 interpret: file TK_EOF .

    $default  reduce using rule 1 (interpret)


state 9

   13 global: TK_IDENT . TK_LPAREN $@2 old_parameter_list_ne TK_RPAREN old_pardef_list TK_SEMICOLON
  294 function_def_start: TK_IDENT . parameter_list_startscope $@24 rest_par_list TK_RPAREN
  296                   | TK_IDENT . TK_LPAREN old_parameter_list_ne $@25 TK_RPAREN old_pardef_list

    TK_LPAREN  shift, and go to state 21

    parameter_list_startscope  go to state 22


state 10

   10 global: TK_ASM . TK_LPAREN string_constant TK_RPAREN TK_SEMICOLON

    TK_LPAREN  shift, and go to state 23


state 11

   11 global: TK_PRAGMA .

    $default  reduce using rule 11 (global)


state 12

   14 global: TK_AT_TRANSFORM . TK_LBRACE global TK_RBRACE TK_IDENT TK_LBRACE globals TK_RBRACE

    TK_LBRACE  shift, and go to state 24


state 13

   15 global: TK_AT_TRANSFORMEXPR . TK_LBRACE expression TK_RBRACE TK_IDENT TK_LBRACE expression TK_RBRACE

    TK_LBRACE  shift, and go to state 25


state 14

   16 global: location . error TK_SEMICOLON

    error  shift, and go to state 26


state 15

    5 globals: $@1 global . globals

    TK_SEMICOLON  shift, and go to state 1

    TK_EOF     reduce using rule 3 (globals)
    TK_RBRACE  reduce using rule 3 (globals)
    $default   reduce using rule 4 ($@1)

    globals  go to state 27
    $@1      go to state 5


state 16

    8 global: declaration .

    $default  reduce using rule 8 (global)


state 17

  180 declaration: decl_spec_list . init_declarator_list TK_SEMICOLON
  181            | decl_spec_list . TK_SEMICOLON
  291 function_def_start: decl_spec_list . declarator
  292                   | decl_spec_list . old_proto_decl

    TK_STAR       shift, and go to state 28
    TK_SEMICOLON  shift, and go to state 29

    $default  reduce using rule 276 (pointer_opt)

    init_declarator_list  go to state 30
    init_declarator       go to state 31
    declarator            go to state 32
    old_proto_decl        go to state 33
    pointer               go to state 34
    pointer_opt           go to state 35


state 18

  187 decl_spec_list: $@12 . my_decl_spec_list
